Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131415

qtprotobufgen crashes on Any inside a oneof field

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.2, 6.9.0 FF
    • 6.8, 6.9
    • Protocol Buffers
    • None
    • All
    • 0f2c3c516 (dev), 819593494 (6.8)

      This code fails to compile with protoc:
       

      message AnyOneOf {
          oneof data {
              google.protobuf.Any any = 1;
          }
      }
      

       

        For Gerrit Dashboard: QTBUG-131415
        # Subject Branch Project Status CR V

            semlanik Alexey Edelev
            dennisoberst Dennis Oberst
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes