Add the missing initializer for the google::protobuf:Any field

Use the empty initialization for the google::protobuf:Any when it's
used as the oneof field.

Fixes: QTBUG-131415
Pick-to: 6.8
Change-Id: Ib2e9d9234b9cf90dce3c72b85001fa1b62a501e8
Reviewed-by: Dennis Oberst <dennis.oberst@qt.io>